manifests/backup-restore-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb-backup-restore-1
  labels:
    app: mariadb-backup-restore
    project: teamspeak
  namespace: personal
spec:
  containers:
    - name: mariadb-backup-restore
      image: mariadb:10.8.3-jammy
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-data
        - mountPath: /var/mariadb/backup
          name: db-backup
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      command:
        - "mariabackup"
      args:
        - "--copy-back"
        - "--target-dir=/var/mariadb/backup"
  volumes:
    - name: db-data
      hostPath:
        path: /var/lib/mysql
    - name: db-backup
      hostPath:
        path: /var/mariadb/backup
