manifests/mariadb-restore-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb-restore
  namespace: personal
  labels:
    name: mariadb-restore
    project: teamspeak
spec:
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: storage-teamspeak-mariadb-0
    - name: backup
      hostPath:
        path: /var/mariadb/backup
  containers:
    - name: mariadb-restore
      image: mariadb
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: data
        - mountPath: /var/mariadb/backup
          name: backup
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      command:
        - mariabackup
      args:
        - --force-non-empty-directories
        - --copy-back
        - --target-dir=/var/mariadb/backup
