manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: personal
spec:
  selector:
    app: mariadb
    project: teamspeak
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
