manifests/teamspeak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: teamspeak
  name: teamspeak
spec:
  ports:
    - name: "9987"
      port: 9987
      protocol: UDP
      targetPort: 9987
    - name: "10011"
      port: 10011
      targetPort: 10011
    - name: "30033"
      port: 30033
      targetPort: 30033
  selector:
    io.kompose.service: teamspeak
status:
  loadBalancer: {}
